--- a/LatihanDOM2/style.css
+++ b/LatihanDOM2/style.css
@@ -110,7 +110,7 @@ h1 {
 }
 
 ul {
-    padding-top: 80px;
+    padding-top: 40px;
     padding-left: 25px;
 }
 
@@ -140,4 +140,9 @@ img {
 
 .Gunting:active, .Batu:active, .Kertas:active {
     top: 2px;
+}
+
+p{
+    padding-top: 20px;
+    text-align: center;
 }
